--- a/.github/workflows/nightly-file.upload.yml
+++ b/.github/workflows/nightly-file.upload.yml
@@ -1,46 +1,55 @@
-name: IT FileUpload
-
-on:
-  schedule:
-    - cron: '0 8 * * *'
-
-permissions:
-  contents: read
-
 jobs:
   nightly:
     if: github.repository == 'primefaces/primefaces' && github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
     name: Java ${{ matrix.java }}, Profile ${{ matrix.profile }}
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v4
+    - continue-on-error: true
+      name: Set up JDK ${{ matrix.java }}
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: ${{ matrix.java }}
+    - continue-on-error: true
+      name: Cache Maven packages
+      uses: actions/cache@v4
+      with:
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        path: ~/.m2
+        restore-keys: ${{ runner.os }}-m2
+    - continue-on-error: true
+      name: Log github.ref
+      run: echo "${{ github.ref }}"
+    - continue-on-error: true
+      name: Build
+      run: mvn clean install -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false
+        -Dmaven.wagon.httpconnectionManager.ttlSeconds=120 --batch-mode --show-version
+    - continue-on-error: true
+      name: Integration Tests FileUpload
+      run: 'mvn -B -V clean install -fprimefaces-integration-tests/pom.xml -Pintegration-tests,${{
+        matrix.profile }} -Dit.test=org.primefaces.integrationtests.fileupload.FileUpload*Test
+
+        '
     strategy:
       fail-fast: false
       matrix:
-        java: [11, 17]
-        profile: [
-          'headless,firefox,myfaces-2.3,uploader-native', 'headless,firefox,mojarra-2.3,uploader-native',
-          'headless,firefox,myfaces-2.3,uploader-commons', 'headless,firefox,mojarra-2.3,uploader-commons',
-          'headless,chrome,myfaces-2.3,uploader-native', 'headless,chrome,mojarra-2.3,uploader-native',
-          'headless,chrome,myfaces-2.3,uploader-commons', 'headless,chrome,mojarra-2.3,uploader-commons'
-        ]
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java }}
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Log github.ref
-        run: echo "${{ github.ref }}"
-      - name: Build
-        run: mvn clean install -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.httpconnectionManager.ttlSeconds=120 --batch-mode --show-version
-      - name: Integration Tests FileUpload
-        run: >
-            mvn -B -V clean install -fprimefaces-integration-tests/pom.xml -Pintegration-tests,${{ matrix.profile }}
-            -Dit.test=org.primefaces.integrationtests.fileupload.FileUpload*Test
+        java:
+        - 11
+        - 17
+        profile:
+        - headless,firefox,myfaces-2.3,uploader-native
+        - headless,firefox,mojarra-2.3,uploader-native
+        - headless,firefox,myfaces-2.3,uploader-commons
+        - headless,firefox,mojarra-2.3,uploader-commons
+        - headless,chrome,myfaces-2.3,uploader-native
+        - headless,chrome,mojarra-2.3,uploader-native
+        - headless,chrome,myfaces-2.3,uploader-commons
+        - headless,chrome,mojarra-2.3,uploader-commons
+name: IT FileUpload
+on:
+  repository_dispatch:
+    types: trigger-ga___nightly-file.upload.yml
+permissions:
+  contents: read
