--- a/.github/workflows/nightly-safari.yml
+++ b/.github/workflows/nightly-safari.yml
@@ -1,38 +1,44 @@
-name: IT Safari
-
-on:
-  schedule:
-    - cron: '0 7 * * *'
-
-permissions:
-  contents: read
-
 jobs:
   nightly:
     if: github.repository == 'primefaces/primefaces' && github.ref == 'refs/heads/master'
-    runs-on: macos-latest
     name: Java ${{ matrix.java }}, Profile ${{ matrix.profile }}
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v4
+    - continue-on-error: true
+      name: Set up JDK ${{ matrix.java }}
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: ${{ matrix.java }}
+    - continue-on-error: true
+      name: Cache Maven packages
+      uses: actions/cache@v4
+      with:
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        path: ~/.m2
+        restore-keys: ${{ runner.os }}-m2
+    - continue-on-error: true
+      name: Log github.ref
+      run: echo "${{ github.ref }}"
+    - continue-on-error: true
+      name: Build
+      run: mvn clean install -Pquick -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false
+        -Dmaven.wagon.httpconnectionManager.ttlSeconds=120 --batch-mode --show-version
+    - continue-on-error: true
+      name: Integration Tests
+      run: mvn -B -V clean install -fprimefaces-integration-tests/pom.xml -Pintegration-tests,${{
+        matrix.profile }}
     strategy:
       matrix:
-        java: [11]
-        profile: [ 'headless,safari,csp,theme-nova,mojarra-2.3' ]
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java }}
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Log github.ref
-        run: echo "${{ github.ref }}"
-      - name: Build
-        run: mvn clean install -Pquick -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.httpconnectionManager.ttlSeconds=120 --batch-mode --show-version
-      - name: Integration Tests
-        run: mvn -B -V clean install -fprimefaces-integration-tests/pom.xml -Pintegration-tests,${{ matrix.profile }}
+        java:
+        - 11
+        profile:
+        - headless,safari,csp,theme-nova,mojarra-2.3
+name: IT Safari
+on:
+  repository_dispatch:
+    types: trigger-ga___nightly-safari.yml
+permissions:
+  contents: read
